deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: joyboy-multithreaded
  name: joyboy-multithreaded
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: joyboy-multithreaded
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: joyboy-multithreaded
    spec:
      containers:
      # - image: pol905/gooneoone:fast-amd64 (simple ping-pong api)
      - image: pol905/gooneoone:slow-amd64 # adds a 1B iteration loop to simulate a CPU intensive op before returning the response
        imagePullPolicy: Always
        name: gooneoone
        resources:
          requests:
            cpu: "2"
          limits:
            cpu: "2"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---

apiVersion: v1
kind: Service
metadata:
  name: joyboy
spec:
  selector:
    app: joyboy-multithreaded
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
